Advanced search completed, title query works, rest are stuck on page? ajax issues? no redirects?

--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -41,11 +41,12 @@
 }
 
 .searchPanel label {
- 
+    
 }
 
 .searchPanel input {
     margin-left:1em;
+    margin-bottom:1em;
 }
 
 .searchPanel div {
